--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<!-- Changed by dianlan -->
 <style type="text/css">
     header.intro-header{
         position: relative;
