--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -91,19 +91,18 @@ layout: default
                 </ul>
 
 
-                {% if site.disqus_username %}
-                <!-- disqus 评论框 start -->
-                <div class="comment">
-                    <div id="disqus_thread" class="disqus-thread"></div>
-                </div>
-                <!-- disqus 评论框 end -->
-                {% endif %}
-
-                {% if site.netease_comment %}
-                <!-- 网易云跟帖 评论框 start -->
-                <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-                <!-- 网易云跟帖 评论框 end -->
-                {% endif %}
+                <!-- comment system using Valine -->
+                <div class="comment"></div>
+                <script>
+                    new Valine({
+                        // AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
+                        av: AV, 
+                        el: '.comment', // 
+                        app_id: 'Lpywq6OR67bwxQzOhS4Nmugb-gzGzoHsz', // 这里填写上面得到的APP ID
+                        app_key: 'roMriRnvEr6NehAsxb68CGpx', // 这里填写上面得到的APP KEY
+                        placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊!' // [v1.0.7 new]留言框占位提示文字
+                    });
+                </script>
             </div>  
 
     <!-- Side Catalog Container -->
